Changes for 3.2.9rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
........S. [ZBX-11426] fixed the housekeeper for not deleting events in open problem state (abs)
A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
A......... [ZBX-12727] fixed response for script.get() method with "editable" flag (Sasha)
A......... [ZBX-12727] fixed dcheck.get(), dhost.get() and dservice.get() permission checks for admin users; related to ZBX-7238 (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.8

3.2.8rc1 was released as 3.2.8 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.8rc1

New features:
A.F....... [ZBX-1357] enabled Turkish translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Russian, Turkish translations; thanks to Zabbix translators (zalex_ua)
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
..F....... [ZBX-12769] fixed XSS vulnerabilities in argument passing for popup forms and file import forms (gcalenko)
A.F....... [ZBX-12768] added schema validation for URL fields based on schemas whitelist in ZBX_URI_VALID_SCHEMES (gcalenko, Sasha)
.......PS. [ZBX-11675] fixed crash that could occur during connection failures to MySQL (Sergejs, vso)
..F....... [ZBX-12617] fixed sorting by host name for items on availability report page (gcalenko)
........S. [ZBX-12696] fixed trigger not being calculated for newly received item values if last one of those is unsupported value (vso)
..F....... [ZBX-12548] fixed notification sound not being played for message with timeout set to greater than minute (gcalenko)