@@ -4,6 +4,7 @@ New features:
 ...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)
 
 Bug fixes:
+A......... [ZBX-8277] improved performance of hostgeneral.unlink() method; fixed SQL statement (Sasha)
 ........S. [ZBX-11426] fixed the housekeeper for not deleting events in open problem state (abs)
 A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
 A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
